[package]
name = "livox-sys"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
build = "build.rs"
links = "livox_sdk_static"
repository = "https://github.com/lkolbly/livox-sys"
categories = ["external-ffi-bindings"]
license = "MIT"
travis-ci = { repository = "lkolbly/livox-sys" }
exclude = [
   "src/Livox-SDK/docs/*"
]

[dependencies]

[build-dependencies]
bindgen = "0.50"
cmake = "0.1"
