[package]
name = "livox-sys"
version = "0.1.1"
description = "A Rust wrapper for the Livox SDK"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
build = "build.rs"
links = "livox_sdk_static"
repository = "https://github.com/lkolbly/livox-sys"
categories = ["external-ffi-bindings"]
license = "MIT"
travis-ci = { repository = "lkolbly/livox-sys" }
exclude = [
   "src/Livox-SDK/docs/*"
]

[dependencies]

[build-dependencies]
bindgen = "0.53.2"
cmake = "0.1"
